fixed alignmens

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ img {
 	position: absolute;
 	width: 100%;
 	height: 100vh;
+	background-repeat: no-repeat;
 }
 
 .stars path {
